--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@
     <br>
     <div id="slides-container" class="h-[50rem] top-[205rem] w-[100%] relative" data-carousel="static">
       <!-- Carousel wrapper -->
-      <div class="h-[100%] m-3 overflow-hidden">
-        <div id="carousel-item" class="group h-[70%] duration-300 ease-in-out rounded-lg bg-yellow-100" data-carousel-item="active">
+      <div class="h-[100%] m-3 overflow-hidden ">
+        <div id="carousel-item" class="group hidden h-[70%] duration-300 ease-in-out rounded-lg bg-yellow-100" data-carousel-item>
           <div class="flex group-hover:visible invisible justify-center space-x-4 absolute bottom-0 h-[6rem] place-items-center w-[100%] border-2 border-black">
             <span class="border-solid border-2 border-black p-2">&#8750;</span>
             <span class="border-solid border-2 border-black p-2">&#8751;</span>
@@ -284,45 +284,53 @@
       </div>
     </div>
     <div id="latest-news" class="grid relative top-[205rem] mt-5 p-2 gap-12">
-        <div>
+        <div class="group">
           <div class="border-solid border-2 border-black h-[20rem] w-[25rem]">picture</div>
           <div class="flex mt-5 gap-x-6 text-sm text-gray-600">
             <span>By Admin</span>
             <span>&#9787 2 Comments</span>
           </div>
-          <span class="font-bold hover:text-blue-600 flex mt-5">No Such Thing As A Life That's Better Than Yours</span>
+          <span class="font-bold group-hover:text-blue-600 flex mt-5">No Such Thing As A Life That's Better Than Yours</span>
           <span class="text-gray-600 flex mt-5">When I met her she was out for love, I bought her leather and some diamond studs..</span>
-          <div class="flex gap-x-2 font-bold mt-5 hover:text-blue-600 hover:gap-x-4">
+          <div class="flex gap-x-2 font-bold mt-5 group-hover:text-blue-600 group-hover:gap-x-4">
             <span>Read More</span>
             <span>&#8594;</span>
           </div>
         </div>
-        <div>
+        <div class="group">
           <div class="border-solid border-2 border-black h-[20rem] w-[25rem]">picture</div>
           <div class="flex mt-5 gap-x-6 text-sm text-gray-600">
             <span>By Admin</span>
             <span>&#9787 2 Comments</span>
           </div>
-          <span class="font-bold hover:text-blue-600 flex mt-5">No Church In The Wild</span>
+          <span class="font-bold group-hover:text-blue-600 flex mt-5">No Church In The Wild</span>
           <span class="text-gray-600 flex mt-5">You can't stop it, music still playing in the background...</span>
-          <div class="flex gap-x-2 font-bold mt-5 hover:text-blue-600 hover:gap-x-4">
+          <div class="flex gap-x-2 font-bold mt-5 group-hover:text-blue-600 group-hover:gap-x-4">
             <span>Read More</span>
             <span>&#8594;</span>
           </div>
         </div>
-        <div>
+        <div class="group">
           <div class="border-solid border-2 border-black h-[20rem] w-[25rem]">picture</div>
           <div class="flex mt-5 gap-x-6 text-sm text-gray-600">
             <span>By Admin</span>
             <span>&#9787 2 Comments</span>
           </div>
-          <span class="font-bold hover:text-blue-600 flex mt-5">It Won't Stop</span>
+          <span class="font-bold group-hover:text-blue-600 flex mt-5">It Won't Stop</span>
           <span class="text-gray-600 flex mt-5">All I want is you, So what you trying to do...</span>
-          <div class="flex gap-x-2 font-bold mt-5 hover:text-blue-600 hover:gap-x-4">
+          <div class="flex gap-x-2 font-bold mt-5 group-hover:text-blue-600 group-hover:gap-x-4">
             <span>Read More</span>
             <span>&#8594;</span>
           </div>
         </div>
+    </div>
+    <div id="get-update" class="relative grid top-[205rem] border-solid place-items-center border-2 shadow-2xl m-5 h-[16rem] rounded-md p-2">
+      <span class="font-extrabold text-2xl relative">GET UPDATE ANYWHERE</span>
+      <span>Wake up today, anything, anything could happen.</span>
+      <div class="flex gap-x-2">
+        <input type="email" placeholder="Enter your email" class="rounded-full" size="15">
+        <button class="text-white p-2 rounded-full border-2 border-blue-700 bg-blue-700 font-bold border-solid w-[10rem] hover:bg-white hover:text-black">Subscribe Now</button>
+      </div>
     </div>
   </div>
   <script src="https://unpkg.com/flowbite@1.5.4/dist/flowbite.js"></script>
