--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
       <span class="font-extrabold text-2xl relative">GET UPDATE ANYWHERE</span>
       <span>Wake up today, anything, anything could happen.</span>
       <div class="flex gap-x-2">
-        <input type="email" placeholder="Enter your email" class="rounded-full" size="15">
+        <input type="email" placeholder="Enter your email" class="rounded-full border-1 border-gray-200" size="15">
         <button class="text-white p-2 rounded-full border-2 border-blue-700 bg-blue-700 font-bold border-solid w-[10rem] hover:bg-white hover:text-black">Subscribe Now</button>
       </div>
     </div>
